VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing
typedef const BYTE CBYTE;


BOOL   CADAPI CadPrint              (VDWG hDwg, BOOL bPrintStamp, HDC hDC);

BOOL   CADAPI CadPrintSetup         (HWND hwParent);


// parameters of default printer
double CADAPI CadPrintGetPaperW    ();

double CADAPI CadPrintGetPaperH    ();

void   CADAPI CadPrintGetPaperSize (double* pWidth, double* pHeight);



/******************************************************************************
*   REGENERATE DRAWING
*******************************************************************************/
void CADAPI CadRegen  (VDWG hDwg);

void CADAPI CadUpdate (VDWG hDwg);


/******************************************************************************
*   VECAD WINDOW
*******************************************************************************/
HWND CADAPI CadWndCreate   (VDWG hDwg, HWND hWndParent, int CadStyle, int X, int Y, int W, int H);

BOOL CADAPI CadWndResize   (HWND hWin, int X, int Y, int W, int H);

BOOL CADAPI CadWndRedraw   (HWND hWin);

HWND CADAPI CadWndSetFocus (HWND hWin);



/******************************************************************************
* ACCELERATOR KEYS
* Links key that comes to VeCAD by the CadWinKeyUp() function
* with any CAD_CMD_... command
* Command - identifier of a command, one of the CAD_CMD_... constants
* VirtKey - virtual key code, Windows VK_... constant or ASCII character
* Flags - defines if <Ctrl> or <Shift> key is pressed
*         can be 0 or combination of CAD_KEY_CTRL and CAD_KEY_SHIFT
*
* Example of usage:
* CadAccelSetKey( CAD_CMD_ZOOM_EXT,  'E', CAD_KEY_CTRL );  // Ctrl+E
* CadAccelSetKey( CAD_CMD_ZOOM_IN,   VK_ADD, 0 );  // "Plus" key
* CadAccelSetKey( CAD_CMD_SNAP_GRID, VK_F9, 0 );   // F9
*******************************************************************************/
void CADAPI CadAccelSetKey (int Command, int VirtKey, int Flags);

// set default assignment for accelerator keys
void CADAPI CadAccelSetDefault ();



/******************************************************************************
*
*  VeCAD controls
*
*******************************************************************************/
// Command window (disabled if hw==0)
HWND CADAPI CadCWCreate (HWND hwParent, int Left, int Top, int Width, int Height);

void CADAPI CadCWDelete ();

BOOL CADAPI CadCWResize (int Left, int Top, int Width, int Height);


//void CADAPI CadCmdPrompt       (VDWG hDwg, LPCTSTR szText, LPCTSTR szDefaultValue); 
//void CADAPI CadCmdPromptAdd    (VDWG hDwg, LPCTSTR szValue); 
//void CADAPI CadCmdPutBasePoint (VDWG hDwg, double x, double y, double z); 


// Magnifier
void CADAPI CadMagPutSize  (int Size);

int  CADAPI CadMagGetSize  ();

void CADAPI CadMagPutScale (int Scal);

int  CADAPI CadMagGetScale ();

void CADAPI CadMagPutPos   (int Pos);

int  CADAPI CadMagGetPos   ();

void CADAPI CadMagPutShow  (BOOL bShow);

BOOL CADAPI CadMagGetShow  ();


// Navigator (Aerial view)
HWND CADAPI CadNavCreate   (HWND hWndParent, int X, int Y, int W, int H, int Flags);

void CADAPI CadNavResize   (int X, int Y, int W, int H);

int  CADAPI CadNavGetParam (int Prm);

void CADAPI CadNavReturnFocus (BOOL bReturn, HWND hWnd);

void CADAPI CadNavSetLink  (HWND hVecWnd);


//void CADAPI CadNavPutShow  (BOOL bShow);
//BOOL CADAPI CadNavGetShow  ();

// comboboxes
HWND CADAPI CadCboxCreate (int CbType, HWND hwParent, int Left, int Top, int Width, int Height, int Hdown);

void CADAPI CadCboxSetActive (int CbType, HWND hwCbox);


// "Layers" combobox
//void CADAPI CadCbLayerSetWindow    (HWND hWin);
//void CADAPI CadCbLayerSelect       (int Index);
//void CADAPI CadCbLayerDraw         (DRAWITEMSTRUCT* pDis);
// "Colors" combobox
//void CADAPI CadCbColorSetWindow    (HWND hWin);
//void CADAPI CadCbColorSelect       (int Index);
//void CADAPI CadCbColorDraw         (DRAWITEMSTRUCT* pDis);
// "Linetypes" combobox
//void CADAPI CadCbLtypeSetWindow    (HWND hWin);
//void CADAPI CadCbLtypeSelect       (int Index);
//void CADAPI CadCbLtypeDraw         (DRAWITEMSTRUCT* pDis);
// "Lineweights" combobox
//void CADAPI CadCbLweightSetWindow  (HWND hWin);
//void CADAPI CadCbLweightSelect     (int Index);
//void CADAPI CadCbLweightDraw       (DRAWITEMSTRUCT* pDis);
// "DimStyle" combobox
//void CADAPI CadCbDimStyleSetWindow (HWND hWin);
//void CADAPI CadCbDimStyleSelect    (int Index);
//void CADAPI CadCbDimStyleDraw      (DRAWITEMSTRUCT* pDis);


/******************************************************************************
* Group of menu functions.
* Used to adjust CAD shortcut popup menus
*******************************************************************************/
// clear menu
void CADAPI CadMenuClear (int MenuId);

// add new item to menu
void CADAPI CadMenuAdd (int MenuId, LPCTSTR szItemText, int ItemCmd);



/******************************************************************************
* RECENT FILES LIST
* This functions are not linked with any CAD object
*******************************************************************************/

// Load recent files list from the file 'szFileName' 
BOOL CADAPI CadRecentLoad (LPCTSTR szFileName);


// Save recent files list
BOOL CADAPI CadRecentSave ();


// Call dialog "Recent files list" to allow an user 
// to select the filename from Recent Files List
// pbShowAtStartup - pointer to variable that keep a state of the checkbox
//     if NULL then the checkbox will be invisible     
//     The variable value can be 0 or 1 (1=checked, 0=unchecked)
// When function exit, the 'bShowAtStartup' variable contains state of
// the "Show at startup" checkbox (0/1)
BOOL CADAPI CadRecentDialog (HWND hWin, TCHAR* szOutFileName, int* pbShowAtStartup);


// Add filename to recent files list
BOOL CADAPI CadRecentAdd (LPCTSTR szFileName);




/******************************************************************************
* UTILITE FUNCTIONS (not linked with any CAD object)
*******************************************************************************/
// Call dialog "Open File" to allow an user to select the filename
BOOL CADAPI CadDialogOpenFile (HWND hwParent, TCHAR* szOutFileName);


// Call dialog "Save File" to allow an user to select the filename
BOOL CADAPI CadDialogSaveFile (HWND hwParent, TCHAR* szOutFileName);


// Call dialog "Tip of the Day"
// szFileName - name of the file that contains the tips
// pbShowAtStartup - pointer to variable that keep a state of the checkbox
//   The variable value can be 0 or 1 (1=checked, 0=unchecked)
//   When function exit, the 'bShowAtStartup' variable contains state of
//   the "Show at startup" checkbox (0/1)
// pTipIndex - pointer to variable that keep index of current tip
// implemented in "DgTip.cpp"
void CADAPI CadTipOfTheDay (HWND hwParent, LPCTSTR szFileName, int* pbShowOnStartup, int* pTipIndex);


// Show Help Info
void CADAPI CadHelp (HWND hWin, LPCTSTR szTopic);


// Dialog "Convert Windows TTF to VeCAD Font"
void CADAPI CadTTF2VCF (HWND hwParent);


// Dialog "Convert AutoCAD SHX font to VeCAD font"
void CADAPI CadSHX2VCF (HWND hwParent);


// Dialog "VeCAD fonts"
void CADAPI CadFontsList (HWND hwParent);


// Dialog "Plugins"
void CADAPI CadPluginsDlg (HWND hwParent);


// Get error code of last operation
int  CADAPI CadGetError ();

void CADAPI CadGetErrorStr (int ErrCode, TCHAR* szStr);


// Replace VeCAD string (fo localization)
void CADAPI CadSetString (int IdStr, LPCTSTR szStr);


// Define plugin for reading image format
BOOL CADAPI CadPluginImageRead (LPCTSTR szExt, LPCTSTR szLibName, LPCTSTR szFuncName, int Mode);


// convert AutoCAD file dxf<->dwg
BOOL CADAPI CadConvertAcadFile (LPCTSTR szInFile, LPCTSTR szOutFile);


// extract image from drawing's file
UINT CADAPI CadExtractImage (LPCTSTR szFileName, BYTE* Buffer);


void CADAPI CadGetVBString (int Val, TCHAR* szStr);


BOOL CADAPI vuGetWindowSize (HWND hWin, int* pW, int* pH);

BOOL CADAPI CadGetWindowSize (HWND hWin, int* pW, int* pH);


// Compresses the source buffer into the destination buffer. 
int CADAPI vuCompress (BYTE* Dest, UINT DestMaxLen, CBYTE* Source, UINT SourceLen, int Level);


// Decompresses the source buffer into the destination buffer
int CADAPI vuExpand (BYTE* Dest, UINT DestMaxLen, CBYTE* Source, UINT SourceLen);


void CADAPI vuRotatePoint (double* pX, double* pY, double* pZ, double Xcen, double Ycen, double Zcen, double Angle, int Plane);

void CADAPI vuPolarPoint  (double* pX, double* pY, double* pZ, double Angle, double Dist, int Plane);

void CADAPI vuScalePoint  (double* pX, double* pY, double* pZ, double Xcen, double Ycen, double Zcen, double ScaleX, double ScaleY, double ScaleZ);

void CADAPI vuMirrorPoint (double* pX, double* pY, double* pZ, double A1, double B1, int Plane);


double CADAPI vuGetAngle       (double x1, double y1, double z1, double x2, double y2, double z2, int Plane);

double CADAPI vuGetDist        (double x1, double y1, double z1, double x2, double y2, double z2, int Plane);

double CADAPI vuNormalizeAngle (double Angle);

void   CADAPI vuNumToStr       (double Val, TCHAR* szOutStr, DWORD MaxDec, BOOL bTrimZero, BOOL bRemainPoint);

VHANDLE CADAPI CadAddRPlan  (VDWG hDwg);


void    CADAPI CadRPlanClear      (VHANDLE hRPlan);

void    CADAPI CadRPlanSetStart   (VHANDLE hRPlan, double X, double Y, double Dist, double DirAngle);

BOOL    CADAPI CadRPlanAddCurve   (VHANDLE hRPlan, double Dist, double RotAngle, int Turn, double Rad, double Len1, double Len2);

void    CADAPI CadRPlanSetEnd     (VHANDLE hRPlan, double Dist);

void    CADAPI CadRPlanUpdate     (VHANDLE hRPlan);


void    CADAPI CadRPlanSetScale (VHANDLE hRPlan, double Scal);


UINT    CADAPI CadRPlanGetNumRec       (VHANDLE hRPlan);

BOOL    CADAPI CadRPlanGetCurveVertex  (VHANDLE hRPlan, UINT iRec, double* pX, double* pY);

BOOL    CADAPI CadRPlanGetCurveCenter  (VHANDLE hRPlan, UINT iRec, double* pX, double* pY);

BOOL    CADAPI CadRPlanGetCurveStart   (VHANDLE hRPlan, UINT iRec, double* pX, double* pY, double* pDirAngle);

BOOL    CADAPI CadRPlanGetCurveEnd     (VHANDLE hRPlan, UINT iRec, double* pX, double* pY, double* pDirAngle);


BOOL    CADAPI CadRPlanAddGrPoint (VHANDLE hRPlan, double Dist, double Offset, double Z);

BOOL    CADAPI CadRPlanGenLevels  (VHANDLE hRPlan, double CellSize, double ZStep, double ZStepBold);


BOOL    CADAPI CadRPlanGetPoint   (VHANDLE hRPlan, double Dist, double* pX, double* pY, double* pZ, double* pDirAngle);

BOOL    CADAPI CadRPlanGetDist    (VHANDLE hRPlan, double X, double Y, double Delta, double* pDist, double* pOffset);

BOOL    CADAPI CadRPlanGetZ       (VHANDLE hRPlan, double X, double Y, double* pZ);