VS2005/Common/VeCADAPI/CadApi2.bas

Public Declare Function CadPrint Lib "vecad.dll" (ByVal hDwg As Long, ByVal bPrintStamp As Long, ByVal hDC As Long) As Long
Public Declare Function CadPrintSetup Lib "vecad.dll" (ByVal hwParent As Long) As Long
Public Declare Function CadPrintGetPaperW Lib "vecad.dll" () As Double
Public Declare Function CadPrintGetPaperH Lib "vecad.dll" () As Double
Public Declare Sub      CadPrintGetPaperSize Lib "vecad.dll" (ByVal pWidth As Long, ByVal pHeight As Long)
Public Declare Sub      CadRegen Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Sub      CadUpdate Lib "vecad.dll" (ByVal hDwg As Long)
Public Declare Function CadWndCreate Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWndParent As Long, ByVal CadStyle As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Long
Public Declare Function CadWndResize Lib "vecad.dll" (ByVal hWin As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Long
Public Declare Function CadWndRedraw Lib "vecad.dll" (ByVal hWin As Long) As Long
Public Declare Function CadWndSetFocus Lib "vecad.dll" (ByVal hWin As Long) As Long
Public Declare Sub      CadAccelSetKey Lib "vecad.dll" (ByVal Command As Long, ByVal VirtKey As Long, ByVal Flags As Long)
Public Declare Sub      CadAccelSetDefault Lib "vecad.dll" ()
Public Declare Function CadCWCreate Lib "vecad.dll" (ByVal hwParent As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Sub      CadCWDelete Lib "vecad.dll" ()
Public Declare Function CadCWResize Lib "vecad.dll" (ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Sub      CadMagPutSize Lib "vecad.dll" (ByVal Size As Long)
Public Declare Function CadMagGetSize Lib "vecad.dll" () As Long
Public Declare Sub      CadMagPutScale Lib "vecad.dll" (ByVal Scal As Long)
Public Declare Function CadMagGetScale Lib "vecad.dll" () As Long
Public Declare Sub      CadMagPutPos Lib "vecad.dll" (ByVal Pos As Long)
Public Declare Function CadMagGetPos Lib "vecad.dll" () As Long
Public Declare Sub      CadMagPutShow Lib "vecad.dll" (ByVal bShow As Long)
Public Declare Function CadMagGetShow Lib "vecad.dll" () As Long
Public Declare Function CadNavCreate Lib "vecad.dll" (ByVal hWndParent As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long, ByVal Flags As Long) As Long
Public Declare Sub      CadNavResize Lib "vecad.dll" (ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long)
Public Declare Function CadNavGetParam Lib "vecad.dll" (ByVal Prm As Long) As Long
Public Declare Sub      CadNavReturnFocus Lib "vecad.dll" (ByVal bReturn As Long, ByVal hWnd As Long)
Public Declare Sub      CadNavSetLink Lib "vecad.dll" (ByVal hVecWnd As Long)
Public Declare Function CadCboxCreate Lib "vecad.dll" (ByVal CbType As Long, ByVal hwParent As Long, ByVal Left As Long, ByVal Top As Long, ByVal Width As Long, ByVal Height As Long, ByVal Hdown As Long) As Long
Public Declare Sub      CadCboxSetActive Lib "vecad.dll" (ByVal CbType As Long, ByVal hwCbox As Long)
Public Declare Sub      CadMenuClear Lib "vecad.dll" (ByVal MenuId As Long)
Public Declare Sub      CadMenuAdd Lib "vecad.dll" (ByVal MenuId As Long, ByVal szItemText As String, ByVal ItemCmd As Long)
Public Declare Function CadRecentLoad Lib "vecad.dll" (ByVal szFileName As String) As Long
Public Declare Function CadRecentSave Lib "vecad.dll" () As Long
Public Declare Function CadRecentDialog Lib "vecad.dll" (ByVal hWin As Long, ByVal szOutFileName As Any, ByVal pbShowAtStartup As Long) As Long
Public Declare Function CadRecentAdd Lib "vecad.dll" (ByVal szFileName As String) As Long
Public Declare Function CadDialogOpenFile Lib "vecad.dll" (ByVal hwParent As Long, ByVal szOutFileName As Any) As Long
Public Declare Function CadDialogSaveFile Lib "vecad.dll" (ByVal hwParent As Long, ByVal szOutFileName As Any) As Long
Public Declare Sub      CadTipOfTheDay Lib "vecad.dll" (ByVal hwParent As Long, ByVal szFileName As String, ByVal pbShowOnStartup As Long, ByVal pTipIndex As Long)
Public Declare Sub      CadHelp Lib "vecad.dll" (ByVal hWin As Long, ByVal szTopic As String)
Public Declare Sub      CadTTF2VCF Lib "vecad.dll" (ByVal hwParent As Long)
Public Declare Sub      CadSHX2VCF Lib "vecad.dll" (ByVal hwParent As Long)
Public Declare Sub      CadFontsList Lib "vecad.dll" (ByVal hwParent As Long)
Public Declare Sub      CadPluginsDlg Lib "vecad.dll" (ByVal hwParent As Long)
Public Declare Function CadGetError Lib "vecad.dll" () As Long
Public Declare Sub      CadGetErrorStr Lib "vecad.dll" (ByVal ErrCode As Long, ByVal szStr As Any)
Public Declare Sub      CadSetString Lib "vecad.dll" (ByVal IdStr As Long, ByVal szStr As String)
Public Declare Function CadPluginImageRead Lib "vecad.dll" (ByVal szExt As String, ByVal szLibName As String, ByVal szFuncName As String, ByVal Mode As Long) As Long
Public Declare Function CadConvertAcadFile Lib "vecad.dll" (ByVal szInFile As String, ByVal szOutFile As String) As Long
Public Declare Function CadExtractImage Lib "vecad.dll" (ByVal szFileName As String, ByVal Buffer As Any) As Long
Public Declare Sub      CadGetVBString Lib "vecad.dll" (ByVal Val As Long, ByVal szStr As Any)
Public Declare Function vuGetWindowSize Lib "vecad.dll" (ByVal hWin As Long, ByVal pW As Long, ByVal pH As Long) As Long
Public Declare Function CadGetWindowSize Lib "vecad.dll" (ByVal hWin As Long, ByVal pW As Long, ByVal pH As Long) As Long
Public Declare Function vuCompress Lib "vecad.dll" (ByVal Dest As Any, ByVal DestMaxLen As Long, ByVal Source As Any, ByVal SourceLen As Long, ByVal Level As Long) As Long
Public Declare Function vuExpand Lib "vecad.dll" (ByVal Dest As Any, ByVal DestMaxLen As Long, ByVal Source As Any, ByVal SourceLen As Long) As Long
Public Declare Sub      vuRotatePoint Lib "vecad.dll" (ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long, ByVal Xcen As Double, ByVal Ycen As Double, ByVal Zcen As Double, ByVal Angle As Double, ByVal Plane As Long)
Public Declare Sub      vuPolarPoint Lib "vecad.dll" (ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long, ByVal Angle As Double, ByVal Dist As Double, ByVal Plane As Long)
Public Declare Sub      vuScalePoint Lib "vecad.dll" (ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long, ByVal Xcen As Double, ByVal Ycen As Double, ByVal Zcen As Double, ByVal ScaleX As Double, ByVal ScaleY As Double, ByVal ScaleZ As Double)
Public Declare Sub      vuMirrorPoint Lib "vecad.dll" (ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long, ByVal A1 As Double, ByVal B1 As Double, ByVal Plane As Long)
Public Declare Function vuGetAngle Lib "vecad.dll" (ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double, ByVal x2 As Double, ByVal y2 As Double, ByVal z2 As Double, ByVal Plane As Long) As Double
Public Declare Function vuGetDist Lib "vecad.dll" (ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double, ByVal x2 As Double, ByVal y2 As Double, ByVal z2 As Double, ByVal Plane As Long) As Double
Public Declare Function vuNormalizeAngle Lib "vecad.dll" (ByVal Angle As Double) As Double
Public Declare Sub      vuNumToStr Lib "vecad.dll" (ByVal Val As Double, ByVal szOutStr As Any, ByVal MaxDec As Long, ByVal bTrimZero As Long, ByVal bRemainPoint As Long)
Public Declare Function CadAddRPlan Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadRPlanClear Lib "vecad.dll" (ByVal hRPlan As Long)
Public Declare Sub      CadRPlanSetStart Lib "vecad.dll" (ByVal hRPlan As Long, ByVal X As Double, ByVal Y As Double, ByVal Dist As Double, ByVal DirAngle As Double)
Public Declare Function CadRPlanAddCurve Lib "vecad.dll" (ByVal hRPlan As Long, ByVal Dist As Double, ByVal RotAngle As Double, ByVal Turn As Long, ByVal Rad As Double, ByVal Len1 As Double, ByVal Len2 As Double) As Long
Public Declare Sub      CadRPlanSetEnd Lib "vecad.dll" (ByVal hRPlan As Long, ByVal Dist As Double)
Public Declare Sub      CadRPlanUpdate Lib "vecad.dll" (ByVal hRPlan As Long)
Public Declare Sub      CadRPlanSetScale Lib "vecad.dll" (ByVal hRPlan As Long, ByVal Scal As Double)
Public Declare Function CadRPlanGetNumRec Lib "vecad.dll" (ByVal hRPlan As Long) As Long
Public Declare Function CadRPlanGetCurveVertex Lib "vecad.dll" (ByVal hRPlan As Long, ByVal iRec As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function CadRPlanGetCurveCenter Lib "vecad.dll" (ByVal hRPlan As Long, ByVal iRec As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Function CadRPlanGetCurveStart Lib "vecad.dll" (ByVal hRPlan As Long, ByVal iRec As Long, ByVal pX As Long, ByVal pY As Long, ByVal pDirAngle As Long) As Long
Public Declare Function CadRPlanGetCurveEnd Lib "vecad.dll" (ByVal hRPlan As Long, ByVal iRec As Long, ByVal pX As Long, ByVal pY As Long, ByVal pDirAngle As Long) As Long
Public Declare Function CadRPlanAddGrPoint Lib "vecad.dll" (ByVal hRPlan As Long, ByVal Dist As Double, ByVal Offset As Double, ByVal Z As Double) As Long
Public Declare Function CadRPlanGenLevels Lib "vecad.dll" (ByVal hRPlan As Long, ByVal CellSize As Double, ByVal ZStep As Double, ByVal ZStepBold As Double) As Long
Public Declare Function CadRPlanGetPoint Lib "vecad.dll" (ByVal hRPlan As Long, ByVal Dist As Double, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long, ByVal pDirAngle As Long) As Long
Public Declare Function CadRPlanGetDist Lib "vecad.dll" (ByVal hRPlan As Long, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double, ByVal pDist As Long, ByVal pOffset As Long) As Long
Public Declare Function CadRPlanGetZ Lib "vecad.dll" (ByVal hRPlan As Long, ByVal X As Double, ByVal Y As Double, ByVal pZ As Long) As Long
